--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,17 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
     "path": "^0.12.7"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon --exec babel-node -r esm server.js"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/node": "^7.10.4",
+    "@babel/preset-env": "^7.10.4"
   }
 }
